--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
         <h1>Repositorio de Juegos PS3</h1>
         <p>Creado por: <strong>LuisZelig47</strong></p>
 
+            <h2>Prueba [BLUSxxxxx]-[PKG Station PS3]</h2>
         <div class="button-container">
             <a href="https://example.com/juego1" class="button">Descargar Juego 1</a>
             <a href="https://example.com/juego2" class="button">Descargar Juego 2</a>
             <a href="https://example.com/juego3" class="button">Descargar Juego 3</a>
+            <a href="https://example.com/juego1" class="button">Descargar Juego 4</a>
+            <a href="https://example.com/juego2" class="button">Descargar Juego 5</a>
+            <a href="https://example.com/juego3" class="button">Descargar Juego 6</a>
         </div>
 
         <p class="message">
