--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Repositorio de Juegos PS3</h1>
         <p>Creado por: <strong>LuisZelig47</strong></p>
 
-            <h2>Grand Theft Auto V  [BLES01807] - [PKG Station PS3] Mediafire</h2>
+            <h2>Grand Theft Auto V  [BLES01807] - PKG Station PS3 - Mediafire</h2>
         <div class="button-container">
             <a href="https://www.mediafire.com/file/1po4xgilu02yu3k/Grand_Theft_Auto_V_%255BBLES01807%255D-%255BGO%255D_Part1.pkg/file" class="button">Descargar Parte 1</a>
             <a href="https://www.mediafire.com/file/5dm4z9rtik6cec2/Grand_Theft_Auto_V_%255BBLES01807%255D-%255BGO%255D_Part2.pkg/file" class="button">Descargar Parte 2</a>
@@ -22,7 +22,7 @@
             <a href="https://www.mediafire.com/file/zndaxtlhbl55iku/Grand_Theft_Auto_V_%255BBLES01807%255D-%255BGO%255D_Part7.pkg/file" class="button">Descargar Parte 7</a>
         </div>
 
-            <h2>Grand Theft Auto V  [NPUB31156 / USA] - [PKG Station PS3] Mediafire</h2>
+            <h2>Grand Theft Auto V  [NPUB31156 / USA] - PKG Station PS3 - Mediafire</h2>
         <div class="button-container">
             <a href="https://www.mediafire.com/file/d3imscm9bla8h7n/01-GTAV_PS3.pkg/file" class="button">Descargar Parte 1</a>
             <a href="https://www.mediafire.com/file/uq62wjvw08xx1vh/02-GTAV_PS3.pkg/file" class="button">Descargar Parte 2</a>
